# Code-Scanner-rs

./: .gitattributes  .gitattributes2  .gitignore  .gitignore2  .scanner-config.example.json  Cargo.toml  README.md  README_py.md  tmp_script.txt
bash/: scan_project.sh
python/: generate_project_summary_django.py
python/scanner/: __init__.py  file_utils.py  paths.py  summary.py  unified.py
scripts/: generate_project_summary.py  generate_project_summary_build.py  scan_project.sh  unified_scanner.py
scripts/scanner/: gitignore.py  paths.py
src/: cli.rs  config.rs  main.rs  project.rs  scanner.rs  utils.rs
