[package]
name = "code_scanner"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] } # CLI parsing
serde = { version = "1.0", features = ["derive"] } # Config JSON
serde_json = "1.0"
ignore = "0.4" # Efficient .gitignore handling (ripgrep engine)
anyhow = "1.0" # Error handling
chrono = "0.4" # Dates
humansize = "2.1" # Byte formatting
pathdiff = "0.2" # Relative paths
